...
          tintColor="white"
        />
        <Text style={styles.headerTitle}>
          {title}
        </Text>
      </View>
      <TouchableOpacity testID="menu-btn" onPress={handleMenuPress} activeOpacity={0.7} style={styles.menuButton}>
        <Ionicons name="menu" size={36} color="white" />
      </TouchableOpacity>
    </View>
  );
}
